prettier-eslint conflict fix

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@babel/polyfill": "7.0.0",
     "@nivo/bar": "^0.52.1",
     "@nivo/calendar": "^0.52.1",
+    "@nivo/line": "^0.56.2",
+    "@nivo/pie": "^0.56.2",
     "@nivo/sunburst": "^0.52.1",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
@@ -72,8 +74,8 @@
     "lodash": "4.17.11",
     "minimist": "1.2.0",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
     "react-preloading-component": "^0.0.5",
@@ -121,7 +123,7 @@
     "eslint": "5.7.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "3.1.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-import-resolver-webpack": "0.10.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
