--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-boilerplate",
-  "version": "3.7.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "name": "messenger-stats",
+  "version": "1.2.0",
+  "description": "Gather data from messenger and make some cool charts out of it !",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git://github.com/ibobcode/messenger-stats.git"
   },
   "engines": {
     "npm": ">=5",
     "node": ">=8.10.0"
   },
-  "author": "Max Stoiber",
+  "author": "Dylan HEIRSTRAETEN",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
