--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Messenger Stats",
-  "version": "1.0",
+  "version": "1.2.3",
   "description": "Extension to scrap messenger data et make some cool charts out of it ! :)",
   "permissions": [
     "tabs",
@@ -25,8 +25,13 @@
     }
   ],
   "browser_action": {
-    "default_icon": "icon-32.png",
+    "default_icon": "icons/icon-32.png",
     "default_title": "Get some stats !",
     "default_popup": "index.html"
+  },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   }
 }
