--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "messenger-stats",
-  "version": "1.2.0",
+  "version": "1.2.3",
   "description": "Gather data from messenger and make some cool charts out of it !",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
     "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout && cp background.js build/ && cp manifest.json build/ && cp icon-32.png build/ && cp contentScript.js build/",
+    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout && cp background.js build/ && cp manifest.json build/ && cp -r icons build/ && cp contentScript.js build/",
     "build:clean": "rimraf ./build",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
